--- a/index.html
+++ b/index.html
@@ -7,9 +7,60 @@
         transform: translate(-50%, -50%);
         width:100vmin;
         height:100vmin;
+        z-index: 0;
+    }
+    .goopSlider {
+        position:absolute;
+        z-index: 2;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        background-color: white;
+        padding:2vmin;
+        border-radius: 2vmin;
+        box-shadow: 0 0 1vmin gray;
+        width:30vmin;
+    }
+    .slidecontainer {
+        width: 100%;
+    }
+
+    #goopiness {
+        -webkit-appearance: none;
+        appearance: none;
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+        width:100%;
+    }
+
+    #goopiness:hover {
+        opacity: 1;
+    }
+
+    #goopiness::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 2vmin;
+        height: 2vmin;
+        background: green;
+        cursor: pointer;
+    }
+
+    #goopiness::-moz-range-thumb {
+        width: 2vmin;
+        height: 2vmin;
+        background: green;
+        cursor: pointer;
     }
 </style>
 <body>
     <canvas id="canvas"></canvas>
+    <div class="goopSlider">
+        <label id="goopLabel" for="goopiness">Goopiness (100)</label>
+        <div class="slidecontainer">
+            <input type="range" id="goopiness" name="goopiness" min="0" max="500" value="100" onchange="goopChange(this.value)">
+          </div>
+    </div>
 </body>
 <script src="script.js"></script>
