--- a/index.html
+++ b/index.html
@@ -1,66 +1,104 @@
 <style>
+    ::-webkit-scrollbar {
+        width: 2vmin;
+        border-radius: 2vmin;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: transparent; 
+        border-radius: 2vmin;
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        background: #2c2c2c; 
+        border-radius: 2vmin;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #4b4b4b;
+    }
+
     canvas {
-        background-color: black;
         position:absolute;
-        left:50%;
-        top:50%;
-        transform: translate(-50%, -50%);
-        width:100vmin;
-        height:100vmin;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
         z-index: 0;
+        background-color: rgb(14, 14, 14);
     }
     .goopSlider {
         position:absolute;
         z-index: 2;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        background-color: white;
-        padding:2vmin;
+        background-color: rgb(10, 10, 10);
         border-radius: 2vmin;
-        box-shadow: 0 0 1vmin gray;
+        box-shadow: 0 0 1vmin rgb(26, 26, 26);
         width:30vmin;
+        max-height: 40vh;
+        overflow-y: scroll;
+        padding:1vmin;
     }
     .slidecontainer {
         width: 100%;
     }
 
-    #goopiness {
+    .goopinessSlider {
         -webkit-appearance: none;
         appearance: none;
-        background: #d3d3d3;
+        background: #2b2b2b;
         outline: none;
         opacity: 0.7;
         -webkit-transition: .2s;
         transition: opacity .2s;
         width:100%;
+        margin-top:1vmin;
+        border-radius:1vmin;
+        height:2vmin;
     }
 
-    #goopiness:hover {
+    .goopinessSlider:hover {
         opacity: 1;
     }
 
-    #goopiness::-webkit-slider-thumb {
+    .goopinessSlider::-webkit-slider-thumb {
         -webkit-appearance: none;
         appearance: none;
         width: 2vmin;
         height: 2vmin;
         background: green;
         cursor: pointer;
+        border-radius:1vmin;
     }
 
-    #goopiness::-moz-range-thumb {
+    .goopinessSlider::-moz-range-thumb {
         width: 2vmin;
         height: 2vmin;
         background: green;
         cursor: pointer;
+        border-radius:1vmin;
+    }
+    .metagonAdj {
+        background-color: transparent;
+        border:none;
+        width:100%;
+        text-align: left;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        color:white;
+        font-size: 1.5vmin;
+        border-radius:2vmin;
+        padding:1.5vmin;
+        transition:0.2s;
+    }
+    .metagonAdj:hover {
+        background-color: rgb(97, 97, 97)
+    }
+    .metagonAdj:active {
+        background-color: rgb(50, 50, 50);
     }
 </style>
-<body>
+<body onresize="resize()">
     <canvas id="canvas"></canvas>
-    <div class="goopSlider">
-        <label id="goopLabel" for="goopiness">Goopiness (100)</label>
-        <div class="slidecontainer">
-            <input type="range" id="goopiness" name="goopiness" min="0" max="500" value="100" onchange="goopChange(this.value)">
-          </div>
+    <div class="goopSlider" id="goopSliderDiv">
     </div>
 </body>
 <script src="script.js"></script>
