--- a/index.html
+++ b/index.html
@@ -1,104 +1,35 @@
 <style>
-    ::-webkit-scrollbar {
-        width: 2vmin;
-        border-radius: 2vmin;
-    }
-
-    ::-webkit-scrollbar-track {
-        background: transparent; 
-        border-radius: 2vmin;
-    }
-    
-    ::-webkit-scrollbar-thumb {
-        background: #2c2c2c; 
-        border-radius: 2vmin;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-        background: #4b4b4b;
-    }
-
-    canvas {
+    embed {
         position:absolute;
-        top:0;
-        left:0;
-        width:100%;
-        height:100%;
-        z-index: 0;
-        background-color: rgb(14, 14, 14);
-    }
-    .goopSlider {
-        position:absolute;
-        z-index: 2;
-        background-color: rgb(10, 10, 10);
-        border-radius: 2vmin;
-        box-shadow: 0 0 1vmin rgb(26, 26, 26);
-        width:30vmin;
-        max-height: 40vh;
-        overflow-y: scroll;
-        padding:1vmin;
-    }
-    .slidecontainer {
-        width: 100%;
-    }
-
-    .goopinessSlider {
-        -webkit-appearance: none;
-        appearance: none;
-        background: #2b2b2b;
-        outline: none;
-        opacity: 0.7;
-        -webkit-transition: .2s;
-        transition: opacity .2s;
-        width:100%;
-        margin-top:1vmin;
-        border-radius:1vmin;
-        height:2vmin;
-    }
-
-    .goopinessSlider:hover {
-        opacity: 1;
-    }
-
-    .goopinessSlider::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        width: 2vmin;
-        height: 2vmin;
-        background: green;
-        cursor: pointer;
-        border-radius:1vmin;
-    }
-
-    .goopinessSlider::-moz-range-thumb {
-        width: 2vmin;
-        height: 2vmin;
-        background: green;
-        cursor: pointer;
-        border-radius:1vmin;
-    }
-    .metagonAdj {
-        background-color: transparent;
-        border:none;
-        width:100%;
-        text-align: left;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        color:white;
-        font-size: 1.5vmin;
+        width:49vw;
+        height:98vh;
+        top:1vh;
         border-radius:2vmin;
-        padding:1.5vmin;
-        transition:0.2s;
     }
-    .metagonAdj:hover {
-        background-color: rgb(97, 97, 97)
+    #classic {
+        left:0.5vw;
     }
-    .metagonAdj:active {
-        background-color: rgb(50, 50, 50);
+    #particle {
+        left:50.5vw;
+    }
+    h1 {
+        position:absolute;
+        z-index:2;
+        left:50%;
+        top:50%;
+        transform:translate(-50%, -50%);
+        border-radius:2vmin;
+        padding:1vmin;
+        color:white;
+        background-color:rgb(24, 24, 24);
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    }
+    body {
+        background-color:rgb(24, 24, 24)
     }
 </style>
-<body onresize="resize()">
-    <canvas id="canvas"></canvas>
-    <div class="goopSlider" id="goopSliderDiv">
-    </div>
+<body>
+    <h1>Classic v. Particle</h1>
+    <embed id="classic" src="classic.html">
+    <embed id="particle" src="particle.html">
 </body>
-<script src="script.js"></script>
